tests/parser/errors/struct_literal.ray
Foo{45}
// For synchronization
var a = 1
Foo{a

var a = Foo{a:5}
var a = Foo{
